--- a/client/src/pages/process-list/ui/root/styles.module.css
+++ b/client/src/pages/process-list/ui/root/styles.module.css
@@ -14,4 +14,16 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    position: relative;
+}
+
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    inset: 0;
+    background-color: rgb(255, 255, 255, 0.5);
 }
