--- a/client/src/pages/process-list/ui/process-card/styles.module.css
+++ b/client/src/pages/process-list/ui/process-card/styles.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    position: relative;
     border: 1px solid #000;
     border-radius: 5px;
     gap: 10px;
@@ -12,9 +13,16 @@
     font-weight: bold;
 }
 
+.link {
+    position: absolute;
+    inset: 0;
+}
+
 .deleteBtn {
     padding: 5px 10px;
     background-color: #000;
+    position: relative;
+    z-index: 2;
     color: #fff;
     border: none;
     border-radius: 5px;
