--- a/client/src/modules/blocks-flow/ui/block/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/block/styles.module.css
@@ -1,11 +1,23 @@
 .block {
     display: flex;
     position: absolute;
+    flex-direction: column;
     flex: 1;
     background-color: #fff;
     border: 1px solid #000;
     padding: 5px;
     border-radius: 5px;
-    min-width: 100px;
+    min-width: 200px;
     min-height: 50px;
+}
+
+.ports {
+    display: flex;
+    justify-content: space-between;
+}
+
+.portsSlot {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
