--- a/client/src/modules/blocks-flow/ui/port/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/port/styles.module.css
@@ -1,11 +1,26 @@
-.block {
+.port {
     display: flex;
-    position: absolute;
-    flex: 1;
-    background-color: #fff;
+    align-items: center;
+    gap: 5px;
+}
+
+.port .input {
+    flex-direction: row-reverse;
+}
+
+.label {
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.target {
+    width: 20px;
+    height: 20px;
+    border-radius: 50px;
     border: 1px solid #000;
-    padding: 5px;
-    border-radius: 5px;
-    min-width: 100px;
-    min-height: 50px;
+    background-color: lightgreen;
+}
+
+.target:hover {
+    background-color: green;
 }
