--- a/client/src/pages/process/ui/root/styles.module.css
+++ b/client/src/pages/process/ui/root/styles.module.css
@@ -14,7 +14,8 @@
     font-size: 30px;
     font-weight: bold;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     text-align: center;
 }
