feat(*): refactor code

--- a/client/src/modules/blocks-flow/ui/port/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/port/styles.module.css
@@ -2,13 +2,13 @@
     display: flex;
     align-items: center;
     gap: 5px;
-}
-
+}   
+ 
 .port.selected .target {
     background-color: green;
 }
 
-.port.otherSelected .target {
+.port.canEndSelection .target {
     background-color: blue;
 }
 
