--- a/client/src/modules/blocks-flow/ui/arrows/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/arrows/styles.module.css
@@ -1,7 +1,11 @@
 .arrows {
-    display: flex;
-    position: absolute;
     flex: 1;
-    inset: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     pointer-events: none;
 }
