--- a/client/src/modules/blocks-flow/ui/arrows/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/arrows/styles.module.css
@@ -1,9 +1,6 @@
 .arrows {
     flex: 1;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    inset: 0;
     width: 100%;
     height: 100%;
     position: absolute;
