--- a/client/src/modules/blocks-flow/ui/root/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/root/styles.module.css
@@ -3,3 +3,19 @@
     position: relative;
     flex: 1;
 }
+
+.arrows {
+    flex: 1;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    pointer-events: none;
+}
+
+.field {
+    display: flex;
+    flex: 1;
+    position: absolute;
+    inset: 0;
+}
