--- a/client/src/modules/blocks-flow/ui/array/styles.module.css
+++ b/client/src/modules/blocks-flow/ui/array/styles.module.css
@@ -1,8 +1,10 @@
 .arrow {
-    flex: 1;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    pointer-events: none;
+    stroke-width: 3px;
+    pointer-events: all;
+    stroke-linecap: round;
+    transition: stroke-width 0.2s;
+}
+
+.arrow:hover {
+    stroke-width: 10px;
 }
